# bmcho-sns

./: .gitignore  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
.github/ISSUE_TEMPLATE/: issue_template.md
config/: nginx.conf
config/nginx/: nginx.conf
sns/: dockerfile  entrypoint.sh  requirements.txt
sns/apps/core/: apps.py  models.py
sns/apps/hashtag/: models.py  serializers.py
sns/apps/post/: models.py  serializers.py  urls.py  views.py
sns/apps/review/: models.py  serializers.py  urls.py  views.py
sns/apps/user/: models.py  serializers.py  tests.py  urls.py  views.py
sns/sns/: settings.py  urls.py
