[tool.poetry]
name = "bmcho-sns"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"
django-restframework = "^0.0.1"
python-dotenv = "0.20.0"
django-extensions = "^3.2.0"
djangorestframework-simplejwt = "^5.2.0"
gunicorn = "^20.1.0"
django-cors-headers = "^3.13.0"
drf-yasg = "^1.21.3"
mysqlclient = "^2.1.1"
django-filter = "^22.1"
django-redis = "^5.2.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
